@@ -71,6 +71,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import static org.awaitility.Awaitility.await;
+import static org.eclipse.jetty.tests.testers.ProcessWrapper.JETTY_START_SEARCH;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
@@ -282,8 +283,8 @@ public class DistributionTests extends AbstractJettyHomeTest
         );
         try (JettyHomeTester.Run run1 = distribution.start("--add-modules=" + mods))
         {
-            assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
-            assertEquals(0, run1.getExitValue());
+            assertTrue(run1.awaitForStart());
+            assertEquals(0, run1.getExitValue(), run1.logs());
 
             Path war = distribution.resolveArtifact("org.eclipse.jetty." + env + ".demos:jetty-" + env + "-demo-proxy-webapp:war:" + jettyVersion);
             distribution.installWar(war, "proxy");
@@ -409,6 +410,45 @@ public class DistributionTests extends AbstractJettyHomeTest
                         .anyMatch(log -> log.contains("h2")), logs(run3));
                 }
             }
+        }
+
+    @Test
+    public void testDefaultLoggingProviderNotActiveWhenExplicitProviderIsPresent() throws Exception
+    {
+        Path jettyBase = newTestJettyBaseDirectory();
+        String jettyVersion = System.getProperty("jettyVersion");
+        JettyHomeTester distribution1 = JettyHomeTester.Builder.newInstance()
+            .jettyVersion(jettyVersion)
+            .jettyBase(jettyBase)
+            .build();
+
+        try (JettyHomeTester.Run run1 = distribution1.start("--approve-all-licenses", "--add-modules=logging-logback,http"))
+        {
+            assertTrue(run1.awaitForStart());
+            assertEquals(0, run1.getExitValue(), run1.logs());
+
+            //Path jettyBase = run1.getConfig().getJettyBase();
+
+            assertTrue(Files.exists(jettyBase.resolve("resources/logback.xml")));
+            // The jetty-logging.properties should be absent.
+            assertFalse(Files.exists(jettyBase.resolve("resources/jetty-logging.properties")));
+        }
+
+        JettyHomeTester distribution2 = JettyHomeTester.Builder.newInstance()
+            .jettyVersion(jettyVersion)
+            .build();
+
+        // Try the modules in reverse order, since it may execute a different code path.
+        try (JettyHomeTester.Run run2 = distribution2.start("--approve-all-licenses", "--add-modules=http,logging-logback"))
+        {
+            assertTrue(run2.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
+            assertEquals(0, run2.getExitValue());
+
+            //Path jettyBase = run2.getConfig().getJettyBase();
+
+            assertTrue(Files.exists(jettyBase.resolve("resources/logback.xml")));
+            // The jetty-logging.properties should be absent.
+            assertFalse(Files.exists(jettyBase.resolve("resources/jetty-logging.properties")));
         }
     }
 
